--- a/other.html
+++ b/other.html
@@ -11,14 +11,14 @@
 </head>
 
 <body dir="ltr">
-    <h1>Hello!</h1>
+    <h1>Hello! This is other page</h1>
     <nav>
         <a href="https://red-salad-a419.amirgoodarzi75.workers.dev">Login using Github</a>
     </nav>
     <p id="login"></p>
     <p id="loading" style="visibility: visible;">Loading . . . </p>
     <p id="message"></p>
-    <script src="./index.js"></script>
+    <script src="./index2.js"></script>
 </body>
 
 </html>
