--- a/other.html
+++ b/other.html
@@ -13,7 +13,7 @@
 <body dir="ltr">
     <h1>Hello! This is other page</h1>
     <nav>
-        <a href="https://red-salad-a419.amirgoodarzi75.workers.dev">Login using Github</a>
+        <a href="https://api.amirihusayn.ir">Login using Github</a>
     </nav>
     <p id="login"></p>
     <p id="loading" style="visibility: visible;">Loading . . . </p>
